--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
